--- a/src/assets/scss/argon-design-system/card.scss
+++ b/src/assets/scss/argon-design-system/card.scss
@@ -1,7 +1,7 @@
 
 .card {
   position: relative;
-  margin-top: 350px;
+//   margin-top: 350px;
 
   &.card-plain {
     background: transparent;
@@ -9,6 +9,8 @@
     border: none;
   }
 }
+
+
 
 .profile-page {
     .card-profile {
