--- a/src/assets/scss/argon-design-system/section.scss
+++ b/src/assets/scss/argon-design-system/section.scss
@@ -1,22 +1,22 @@
 .section {
     position: relative;
-    padding-top: $spacer * 2;
-    padding-bottom: $spacer * 4;
+    // padding-top: $spacer * 2;
+    // padding-bottom: $spacer * 4;
 }
 
 .section-xl {
-    padding-top: $spacer * 2;
-    padding-bottom: $spacer * 8;
+    // padding-top: $spacer * 2;
+    // padding-bottom: $spacer * 8;
 }
 
 .section-lg {
-    padding-top: $spacer * 2;
-    padding-bottom: $spacer * 2;
+    // padding-top: $spacer * 2;
+    // padding-bottom: $spacer * 2;
 }
 
 .section-sm {
-    padding-top: $spacer * 2;
-    padding-bottom: $spacer * 2;
+    // padding-top: $spacer * 2;
+    // padding-bottom: $spacer * 2;
 }
 
 // Hero sections
